--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,6 +9,5 @@ body,
 .app {
     height: 100%;
     width: 100%;
-    font-family: 'Poppins', sans-serif;
-    @apply text-white;
+    font-family: 'Roboto Slab';
 }
