--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rochester&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,3 +12,11 @@ body,
     width: 100%;
     font-family: 'Roboto Slab';
 }
+
+.rochester-regular {
+    font-family: "Rochester", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  
